user permission updates

--- a/PMS-PropertyHapa.Staff/Views/Budget/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Budget/Index.cshtml
@@ -2,6 +2,7 @@
 @using PMS_PropertyHapa.Staff.Services.IServices
 @using System.Security.Claims
 @using PMS_PropertyHapa.Models.DTO
+@using static PMS_PropertyHapa.Shared.Enum.SD
 @model IEnumerable<BudgetDto>
 @{
     ViewData["Title"] = "Budget";
