--- a/PMS-PropertyHapa.Staff/Views/Calendar/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Calendar/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@using PMS_PropertyHapa.Staff.Services
 @using PMS_PropertyHapa.Staff.Services.IServices
 @using System.Security.Claims
+@using static PMS_PropertyHapa.Shared.Enum.SD
 @{
     ViewData["Title"] = "Calendar";
     Layout = "~/Views/Shared/_Layout.cshtml";
