--- a/PMS-PropertyHapa.Staff/Views/AccountType/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/AccountType/Index.cshtml
@@ -2,6 +2,7 @@
 @using PMS_PropertyHapa.Staff.Services.IServices
 @using System.Security.Claims
 @using PMS_PropertyHapa.Models.Entities
+@using static PMS_PropertyHapa.Shared.Enum.SD
 @model IEnumerable<AccountType>
 @{
     ViewData["Title"] = "Index";
