--- a/PMS-PropertyHapa.Staff/Views/Communication/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Communication/Index.cshtml
@@ -1,6 +1,7 @@
 @using PMS_PropertyHapa.Staff.Services
 @using PMS_PropertyHapa.Staff.Services.IServices
 @using System.Security.Claims
+@using static PMS_PropertyHapa.Shared.Enum.SD
 @model PMS_PropertyHapa.Models.DTO.CommunicationsViewModel
 @{
     ViewData["Title"] = "Index";
