--- a/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
 @using PMS_PropertyHapa.Staff.Services
 @using PMS_PropertyHapa.Staff.Services.IServices
 @using System.Security.Claims
+@using static PMS_PropertyHapa.Shared.Enum.SD
 @inject IConfiguration Configuration
 @inject IPermissionService _permissionService;
 
