--- a/PMS-PropertyHapa.Admin/Views/Invoice/Index.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Invoice/Index.cshtml
@@ -39,6 +39,8 @@
                                         <th style="width:290px!Important">User Id</th>
                                         <th style="width:290px!Important">Name</th>
                                         <th style="width:290px!Important">Email</th>
+                                        <th style="width:290px!Important">Phone</th>
+                                        <th style="width:290px!Important">Address</th>
                                         <th style="width:290px!Important">Download Invoice</th>
                                     </tr>
                                 </thead>
@@ -74,6 +76,14 @@
                 },
                 {
                     "data": "ToEmail",
+                    "className": "tableFontSize align-middle"
+                },
+                {
+                    "data": "PhoneNumber",
+                    "className": "tableFontSize align-middle"
+                },
+                {
+                    "data": "Address",
                     "className": "tableFontSize align-middle"
                 },
                 {
