--- a/PMS-PropertyHapa.Admin/Views/Payments/Index.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Payments/Index.cshtml
@@ -34,6 +34,8 @@
                                 <thead>
                                     <tr>
                                         <th scope="col" class="tableHeaderbg">Payee</th>
+                                        <th scope="col" class="tableHeaderbg">Phone</th>
+                                        <th scope="col" class="tableHeaderbg">Address</th>
                                         <th scope="col" class="tableHeaderbg">Amount</th>
                                         <th scope="col" class="tableHeaderbg">Subscription Type</th>
                                         <th scope="col" class="tableHeaderbg">Email Address</th>
@@ -66,6 +68,14 @@
             "columns": [
                 {
                     "data": "Payee",
+                    "className": "tableFontSize align-middle"
+                },
+                {
+                    "data": "PhoneNumber",
+                    "className": "tableFontSize align-middle"
+                },
+                {
+                    "data": "Address",
                     "className": "tableFontSize align-middle"
                 },
                 {
