--- a/PMS-PropertyHapa.Admin/Views/SubscriptionRequest/Index.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/SubscriptionRequest/Index.cshtml
@@ -61,7 +61,7 @@
         <div class="page-title">
             <div class="row">
                 <div class="col-12">
-                    <h3>Subscription List</h3>
+                    <h3>User Request List</h3>
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a class="home-item" href="/"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Subscription</li>
