--- a/PMS-PropertyHapa.Staff/Views/Landlord/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Landlord/Index.cshtml
@@ -244,8 +244,8 @@
                         </td>
                         <td>@item.EmailAddress</td>
                         <td>@item.PhoneNumber</td>
-                        <td>10</td>
-                        <td>5</td>
+                        <td>@item.NoOfAssets</td>
+                        <td>@item.NoOfUnits</td>
                         <td class="text-center">
                             <div class="actions_style">
                                 <a class="icon" href="#" data-bs-toggle="dropdown">
