--- a/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
@@ -96,7 +96,7 @@
 
     <link href="~/dashboard/assets/css/customstyle.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/scrollbar.css">
-    <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/datatables.css">
+    
     <!-- Bootstrap css-->
     <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/bootstrap.css">
     <!-- App css-->
@@ -106,9 +106,7 @@
     <link rel="stylesheet" type="text/css" href="~/dashboard/assets/css/vendors/jkanban.css" />
 
     <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/responsive.css">
-    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.4/dist/sweetalert2.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
+    
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet"> *@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -134,15 +132,18 @@
           rel="stylesheet" />
     <link href="~/assets/vendor/bootstrap-icons/bootstrap-icons.css"
           rel="stylesheet" />
-    <link href="assets/vendor/date-picker/css/datepicker.material.css"
-          rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/date-picker.css">
+    <link href="~/assets/vendor/date-picker/css/datepicker.material.css" rel="stylesheet" />
+    
     <link href="~/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
     <link href="~/assets/vendor/quill/quill.snow.css" rel="stylesheet" />
     <link href="~/assets/vendor/quill/quill.bubble.css" rel="stylesheet" />
     <link href="~/assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
     <link href="~/assets/vendor/simple-datatables/style.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.4/dist/sweetalert2.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
-
+    <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/datatables.css">
     <!-- Main CSS File -->
     <link href="~/assets/css/style.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -722,12 +723,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="~/Dashboard/assets/js/jquery-3.5.1.min.js"></script>
     <script src="~/Dashboard/assets/js/config.js"></script>
+    <script src="~/dashboard/assets/js/datepicker/date-picker/datepicker.js"></script>
+    <script src="~/dashboard/assets/js/datepicker/date-picker/datepicker.en.js"></script>
     <!-- Main JS File -->
     <script src="~/assets/js/main.js"></script>
     <!-- Charts Custom JS File -->
     <script src="~/assets/js/chartsScripts.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.4/dist/sweetalert2.all.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+
+    <script src="~/Dashboard/assets/js/datatable/datatables/jquery.dataTables.min.js"></script>
     
     @*  <!-- latest jquery-->
     <script src="~/Dashboard/assets/js/jquery-3.5.1.min.js"></script>
@@ -779,9 +786,9 @@
     <!-- login js-->
     <!-- Plugin used-->
     <!-- Plugins JS start-->
-    <script src="~/Dashboard/assets/js/datatable/datatables/jquery.dataTables.min.js"></script>
+    
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.4/dist/sweetalert2.all.min.js"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@6.1.11/index.global.min.js"></script>
 
